book/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /books
          pathType: Prefix
          backend:
            service:
              name: book
              port:
                number: 8080
